# DocAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  logging_utils.py  models.py
doc/: video-calling_agora-console-rest-api.md  video-calling_ai-noise-suppression_android.md  video-calling_alpha-transparency-effect_android.md  video-calling_app-size-optimization_android.md  video-calling_audio-mixing-and-sound-effects_android.md  video-calling_audio-strength-stream-selection_android.md  video-calling_authentication-workflow_android.md  video-calling_ban-user-privileges.md  video-calling_best-practices-sound-quality_android.md  video-calling_billing-policies.md  video-calling_camera-movement_android.md  video-calling_channel-event-type.md  video-calling_cloud-proxy-allowed-ips_android.md  video-calling_cloud-proxy-migration-guide_android.md  video-calling_cloud-proxy_android.md  video-calling_compile-run-sample-project_android.md  video-calling_configure-audio-encoding_android.md  video-calling_configure-video-encoding_android.md  video-calling_connection-status-management_android.md  video-calling_console-overview.md  video-calling_core-concepts_android.md  video-calling_create-rules.md  video-calling_custom-audio_android.md  video-calling_custom-video_android.md  video-calling_delete-rules.md  video-calling_deploy-token-server.md  video-calling_ensure-service-reliability.md  video-calling_error-codes_android.md  video-calling_face-capture_android.md  video-calling_firewall_android.md  video-calling_geofencing_android.md  video-calling_get-rule-list.md  video-calling_get-started-sdk_android.md  (+44 more)
tests/: __init__.py  (+7 more)
(+34 files in other folders)
