[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-agent"
version = "0.1.0"
description = "CLI-first documentation QA agent scaffold"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "psycopg[binary]>=3.2.0",
]

[project.scripts]
doc-agent = "app.cli.main:app"
doc-agent-web = "app.web.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.web" = ["templates/*.html", "static/*.css", "static/*.js", "static/*.jsx"]
